# palimpsest

./: .gitignore  Cargo.toml  Makefile  Packager.toml  README.md
.githooks/: pre-commit
.github/: CODE_OF_CONDUCT.md  README.md
crates/cdv/src/: mod.rs
scripts/: bump-version.rs  test.sh
src/: lib.rs  main.rs  state.rs  titlebar.rs
src/auth/: credentials.rs  github_api.rs
src/components/: sidebar.rs  tabbar.rs  titlebar.rs  toolbar.rs
src/git/: cache.rs  error.rs  live.rs  mod.rs  models.rs  repo.rs
src/logger/: mod.rs
src/state/: mod.rs
src/ui/: body.rs  colors.rs  command_palette.rs  commit_drawer.rs  commit_panel.rs  mod.rs  profile_panel.rs  repo_manager.rs  repo_manager_body.rs  repo_manager_sidebar.rs  setup_wizard.rs  sidebar.rs  tabbar.rs  titlebar.rs  toolbar.rs
src/ui/core/: filetree.rs  mod.rs  passphrase_prompt.rs  setup_wizard.rs
src/ui/repo_manager/: mod.rs  repo_manager_body.rs  repo_manager_sidebar.rs
src/ui/sidebar/: branch_dropdown.rs  remote_branch_dropdown.rs  remote_dropdown.rs
