[package]
name = "palimpsest"
version = "0.0.29"
edition = "2024"
description = "A git history visualizer"
homepage = "https://github.com/parazeeknova/palimpsest"
license-file = "LICENSE"

[dependencies]
eframe = "0.34.2"
egui-phosphor = "0.12.0"
egui_extras = { version = "0.34.2", features = ["svg"] }
git2 = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zed = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.17.2"

[package.metadata.packager]
product-name = "Palimpsest"
identifier = "io.github.parazeeknova.palimpsest"
category = "DeveloperTool"
publisher = "parazeeknova"
copyright = "Copyright 2024 parazeeknova"
out-dir = "dist"
icons = [
  "src/assets/logo.png",
]

binaries = [{ path = "palimpsest", main = true }]

resources = [
  "src/assets/*",
]

[package.metadata.packager.macos]
minimum-system-version = "11.0"

[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libxcb-render0", "libxcb-shape0", "libxcb-xfixes0", "libxkbcommon-x11-0"]
section = "devel"
priority = "optional"

[package.metadata.packager.pacman]
depends = ["gtk3", "libxkbcommon-x11"]

[package.metadata.packager.windows]
digest-algorithm = "sha256"

[package.metadata.packager.nsis]
installer-mode = "currentUser"
display-language-selector = true
