[package]
name = "palimpsest"
version = "0.0.98"
edition = "2024"
description = "A git history visualizer"
homepage = "https://github.com/parazeeknova/palimpsest"
license-file = "LICENSE"

[dependencies]
directories = "6.0.0"
eframe = { version = "0.34.2", features = ["persistence"] }
egui-phosphor = "0.12.0"
egui_extras = { version = "0.34.2", features = ["svg", "all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg"] }
git2 = "0.21.0"
notify = "6.1.1"
keyring = "2.1.2"
reqwest = { version = "0.13.3", features = ["blocking", "form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
zed = "0.2.0"
aes = "0.8.4"
cbc = "0.1.2"
sha2 = "0.10.9"
rand = "0.8.6"
aes-gcm = "0.10.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }


[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.17.2"

[package.metadata.packager]
product-name = "Palimpsest"
identifier = "io.github.parazeeknova.palimpsest"
category = "DeveloperTool"
publisher = "parazeeknova"
copyright = "Copyright 2024 parazeeknova"
out-dir = "dist"
icons = [
  "src/assets/logo.png",
]

binaries = [{ path = "palimpsest", main = true }]

resources = [
  "src/assets/*",
]

[package.metadata.packager.macos]
minimum-system-version = "11.0"

[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libxcb-render0", "libxcb-shape0", "libxcb-xfixes0", "libxkbcommon-x11-0"]
section = "devel"
priority = "optional"

[package.metadata.packager.pacman]
depends = ["gtk3", "libxkbcommon-x11"]

[package.metadata.packager.windows]
digest-algorithm = "sha256"

[package.metadata.packager.nsis]
installer-mode = "currentUser"
display-language-selector = true
